--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,6 +20,7 @@ updates:
         patterns:
           - "org.jetbrains.kotlin:*"
           - "org.jetbrains.kotlin"
+          - "org.jetbrains.kotlin.*"
           - "com.google.devtools.ksp"
           - "de.jensklingenberg.ktorfit"
 registries:
