--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,10 +13,7 @@ on:
       - main
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
-  pull_request:
-    branches:
-      - main
-      - latest
+  pull_request: {}
 
 env:
   # Use docker.io for Docker Hub if empty
