--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ ktor = "3.1.0"
 ktorfit = "2.5.2"
 logback = "1.5.18"
 redacted = "1.13.0"
+sqldelight = "2.1.0"
 
 [libraries]
 apollo-runtime = { module = "com.apollographql.apollo:apollo-runtime", version.ref = "apollo" }
@@ -57,6 +58,8 @@ logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 ktorfit-lib = { module = "de.jensklingenberg.ktorfit:ktorfit-lib", version.ref = "ktorfit" }
 ktorfit-response= { module = "de.jensklingenberg.ktorfit:ktorfit-converters-response", version.ref = "ktorfit" }
 
+sqldelight-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
+
 [plugins]
 apollo = { id = "com.apollographql.apollo", version.ref = "apollo" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
@@ -66,3 +69,4 @@ ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinxSerialization" }
 redacted = { id = "dev.zacsweers.redacted", version.ref = "redacted" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
