--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -62,7 +62,7 @@ jobs:
       # Install the cosign tool
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || contains(github.event.pull_request.labels.*.name, 'pr-build')
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || github.ref == 'refs/heads/candidate' || contains(github.event.pull_request.labels.*.name, 'pr-build')
         uses: sigstore/cosign-installer@3454372f43399081ed03b604cb2d021dabca52bb #v3.8.2
         with:
           cosign-release: 'v2.2.4'
@@ -81,7 +81,7 @@ jobs:
       # Login against a Docker registry
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || contains(github.event.pull_request.labels.*.name, 'pr-build')
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || github.ref == 'refs/heads/candidate' || contains(github.event.pull_request.labels.*.name, 'pr-build')
         uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -104,7 +104,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || contains(github.event.pull_request.labels.*.name, 'pr-build') }}
+          push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || github.ref == 'refs/heads/candidate' ||contains(github.event.pull_request.labels.*.name, 'pr-build') }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -116,7 +116,7 @@ jobs:
       # transparency data even for private images, pass --force to cosign below.
       # https://github.com/sigstore/cosign
       - name: Sign the published Docker image
-        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || contains(github.event.pull_request.labels.*.name, 'pr-build')
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/latest' || github.ref == 'refs/heads/candidate' || contains(github.event.pull_request.labels.*.name, 'pr-build')
         env:
           # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
           TAGS: ${{ steps.meta.outputs.tags }}
