Update dependency patterns in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,7 +22,8 @@ updates:
           - "org.jetbrains.kotlin"
           - "org.jetbrains.kotlin.*"
           - "com.google.devtools.ksp"
-          - "de.jensklingenberg.ktorfit"
+          - "de.jensklingenberg.ktorfit:*"
+          - "dev.zacsweers.redacted"
 registries:
   maven-google:
     type: "maven-repository"
