Add Docker package ecosystem to Dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,10 @@ updates:
           - "com.google.devtools.ksp"
           - "de.jensklingenberg.ktorfit:*"
           - "dev.zacsweers.redacted"
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "weekly"
 registries:
   maven-google:
     type: "maven-repository"
